# sdlew

./: CMakeLists.txt  README
auto/: sdlew_gen.sh
include/: sdlew.h
include/SDL/: SDL.h  SDL_active.h  SDL_audio.h  SDL_cdrom.h  SDL_config.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_joystick.h  SDL_keyboard.h  SDL_loadso.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_rwops.h  SDL_stdinc.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_version.h  SDL_video.h
include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_mouse.h  SDL_mutex.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_shape.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_syswm.h  SDL_test.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_crc32.h  SDL_test_font.h  SDL_test_fuzzer.h  (+10 more)
sdlewTest/: sdlewTest.c
src/: sdlew.c  sdlew.map
